@@ -1,15 +1,13 @@
-package com.github.scribejava.core.model;
+package com.github.scribejava.core.httpclient;
 
+import com.github.scribejava.core.model.OAuthAsyncRequestCallback;
+import com.github.scribejava.core.model.OAuthRequestAsync;
+import com.github.scribejava.core.model.Verb;
 import java.io.File;
 import java.io.IOException;
 import java.util.Map;
 import java.util.concurrent.Future;
 
-/**
- *
- * @deprecated use {@link com.github.scribejava.core.httpclient.HttpClient}
- */
-@Deprecated
 public interface HttpClient {
 
     void close() throws IOException;
@@ -25,12 +23,4 @@ public interface HttpClient {
     <T> Future<T> executeAsync(String userAgent, Map<String, String> headers, Verb httpVerb, String completeUrl,
             File bodyContents, OAuthAsyncRequestCallback<T> callback, OAuthRequestAsync.ResponseConverter<T> converter);
 
-    /**
-     *
-     * @deprecated use {@link com.github.scribejava.core.httpclient.HttpClientConfig}
-     */
-    @Deprecated
-    interface Config {
-
-    }
 }
