@@ -1,0 +1,6 @@
+package com.github.scribejava.core.httpclient;
+
+public interface HttpClientConfig {
+
+    HttpClientConfig createDefaultConfig();
+}
