@@ -1,9 +1,9 @@
 package com.github.scribejava.httpclient.ahc;
 
-import com.github.scribejava.core.model.HttpClient;
+import com.github.scribejava.core.httpclient.HttpClientConfig;
 import org.asynchttpclient.AsyncHttpClientConfig;
 
-public class AhcHttpClientConfig implements HttpClient.Config {
+public class AhcHttpClientConfig implements HttpClientConfig {
 
     private final AsyncHttpClientConfig clientConfig;
 
@@ -13,5 +13,14 @@ public class AhcHttpClientConfig implements HttpClient.Config {
 
     public AsyncHttpClientConfig getClientConfig() {
         return clientConfig;
+    }
+
+    @Override
+    public HttpClientConfig createDefaultConfig() {
+        return defaultConfig();
+    }
+
+    public static HttpClientConfig defaultConfig() {
+        return new AhcHttpClientConfig(null);
     }
 }
