@@ -1,12 +1,13 @@
 package com.github.scribejava.httpclient.ning;
 
 import com.github.scribejava.core.httpclient.HttpClientProvider;
-import com.github.scribejava.core.model.HttpClient;
+import com.github.scribejava.core.httpclient.HttpClient;
+import com.github.scribejava.core.httpclient.HttpClientConfig;
 
 public class NingProvider implements HttpClientProvider {
 
     @Override
-    public HttpClient createClient(HttpClient.Config httpClientConfig) {
+    public HttpClient createClient(HttpClientConfig httpClientConfig) {
         if (httpClientConfig instanceof NingHttpClientConfig) {
             return new NingHttpClient((NingHttpClientConfig) httpClientConfig);
         }
