@@ -4,6 +4,7 @@
  * add support for byte[] and File (async only) payload in OAuth Requests (thanks to https://github.com/keijohyttinen)
  * add support for  HTTP verbs (thanks to https://github.com/keijohyttinen)
  * add OkHttp http client support (thanks to https://github.com/arcao)
+ * add default HTTP client configs (to use like 'new ServiceBuilder().httpClientConfig(OkHttpHttpClientConfig.defaultConfig())')
 
 [3.3.0]
  * update Facebook v2.6 -> v2.8
